--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div class="nav-item li">projects</div>
         <div class="nav-item li">consultation</div>
         <div class="nav-item li">about</div>
+        <div class="nav-item li">TEST</div>
         <div class="nav-item li">contact</div>
       </div>
 
