--- a/index.html
+++ b/index.html
@@ -14,19 +14,14 @@
     </head>
 
     <body>
-      <!-- Header Navigation -->
-      <h1>Sonali Sampat</h1>
-      <div class="nav-item ul">
-        <div class="nav-item li">projects</div>
-        <div class="nav-item li">consultation</div>
-        <div class="nav-item li">about</div>
-        <div class="nav-item li">TEST</div>
-        <div class="nav-item li">contact</div>
+      <div class="content">
+        <h1 class="name">Sonali Sampat |</h1>
+        <h1 class="role">UX Designer & Educator</h1>
+        <div class="headimage"></div>
+        <h2 class="content">I create end-to-end inclusive user experiences and design systems for digital products and services. This is my coded website.</h2>
+        <div class="button">
+         <a href="https://www.sonalisampat.com/">View My Work</a>
+        </div>
       </div>
-
-
-
-
-
     </body>
 </html>
